<resources>
    <string name="app_name">Lupus</string>
    <string name="play"><b>Play</b></string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="welcome">Welcome to the new Lupus game!</string>
    <string name="gameOver">GAME OVER</string>
    <string name="villagersWin">%s village is safe!</string>
    <string name="wolvesWin">Did you hear that?</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="isAWolf">is a wolf.</string>
    <string name="isNotAWolf">is not a wolf.</string>
    <string name="hasBeenLynched">has been lynched.</string>
    <string name="suspects">The village has some suspects:</string>
    <string name="noKilled">Tonight nobody was killed.</string>
    <string name="killed">has been killed tonight.</string>


    <!-- Numbers-->
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>


    <!-- Village -->
    <string name="village">In what village are you in?</string>
    <string name="villageText">Village name</string>


    <!-- Characters -->
    <string name="demoniac">Demoniac</string>
    <string name="masons">Masons</string>
    <string name="guard">Guard</string>
    <string name="medium">Medium</string>
    <string name="villager">Villager</string>
    <string name="werehamster">Werehamster</string>
    <string name="clairvoyant">Clairvoyant</string>
    <string name="wolf">Wolf</string>


    <!-- PlayerSelection -->
    <string name="howManyPlayers">How many of you are playing?</string>
    <string name="whoMaster">Who\'s the Master?</string>
    <string name="master">Master\'s name</string>
    <string name="player">Player name</string>
    <string name="whoIsPlaying">Who\'s playing?</string>


    <!-- CharacterSelection -->
    <string name="whatCharacter">What characters do you want to play with?</string>


    <!-- RandomAssignment -->
    <string name="card">Card</string>
    <string name="name">Name</string>


    <!-- Greetings -->
    <string-array name="greetings" formatted="false">
        <item>Here we are finally, we\'re in %s, a beautiful village! Birds tweet, fishes swim fast in the lake, sheeps bleat happy in the camps and.. strangers arrive at the village. They\'re many, they\'re weird: some of them are werewolves!</item>
        <item> Welcome everyone! You\'re in %s, one of the beauty of this world. Before getting you to your rooms we wanted you to know there have been recorded some hawls the past days. We highly recommend you not to leave the village by night. Alright, now I\'ll get you to your rooms, please follow.</item>
        <item> We are in %s, the country par excellence when it comes to sightings of werewolves .. just kidding, do not worry! Just seal doors and windows at night.. </item>
        <item> Hi, you are in %s, one of the most beautiful countries of the place! Enjoy the scenery and surroundings by day.. by night stay at home though. </item>
    </string-array>


    <!-- Characters calls -->
    <string name="masonsCall">The Masons open the eyes and recognize each other.</string>
    <string-array name="wolvesCall">
        <item>The wolves howl together and gather together.</item>
        <item>The wolves get out of their dens and choos their prey.</item>
    </string-array>
    <string name="clairvoyantCall">The Clairvoyant opens the eyes and points the one who want to probe.</string>
    <string name="guardCall">The Guard chooses who to bravely protect during the night.</string>
    <string name="mediumCall">The Medium open the eyes and talks with the ghost of the person lynched that day.</string>


    <!-- Night Strings -->
    <string name="night" formatted="false">It\'s night at %s, everybody closes his eyes.</string>


    <!-- Day Strings -->
    <string-array name="goodMorning" formated="false">
        <item>Good Morning folks!</item>
        <item>Sun\'s out, guns out.</item>
        <item>Careless vampires burn, and you wake up!</item>
        <item>Can\'t find the moon. Oh it\'s probably morning then..</item>
        <item>Darkness flees from %s, wake up!</item>
        <item>Sunlight manifests, it\'s morning %s!</item>
        <item>Stars went to bed, and %s wakes up!</item>
        <item>Be beep. Be beep. %s wake up!</item>
    </string-array>

    <string name="savaged">Tonight the wolves have divoured %s !</string>
    <string name="savagedMaster">Tonight our dear Master\'s been divoured by the wolves!</string>
    <string name="talk">All the habitants gather together to discuss what happened. </string>
    <string name="speeches">Now each suspect will have an harangue to prove his innocence.</string>

    <!-- RecyclerViews' questions -->
    <string name="clairvoyantQuestion">Who do you want to probe?</string>
    <string name="guardQuestion">Who do you want to protect?</string>
    <string name="wolvesQuestion">Who do you want to divoure?</string>
    <string name="voteQuestion">Who do you suspect?</string>
    <string name="lynchQuestion">Who do you want to lynch?</string>
    <string name="questionMark">\?</string>
    <string name="players">Current players</string>

    <!-- Settings -->
    <string name="settings">Settings</string>

    <string-array name="settingsOptions">
        <item>Restart game</item>
        <item>Credits</item>
    </string-array>

    <!-- Restart Button -->
    <string name="restart">Restart</string>
    <string name="restartMessage">Do you want to start a new game? All the progress made in this game will be lost.</string>
</resources>

