<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:fillViewport="true">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#e0ab18"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.FET.leonardo.scurcola.NameSelection">

    <TextView
        android:id="@+id/whatVillage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="top|center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:layout_weight="4"
        android:text="@string/village"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="50sp"/>

    <EditText
        android:id="@+id/village"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:hint="@string/villageText"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="#AAFFFFFF"
        android:alpha="50"/>


    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"/>


    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick"
        android:text="@string/next"
        android:textColor="#e0ab18"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
</ScrollView>
